Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,11 @@
    "outputs": [],
    "source": [
     "def retrieve_titles(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    warning = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    book_container = warning.nextSibling.nextSibling\n",
+    "    titles = [h3.find('a').attrs['title'] for h3 in book_container.findAll('h3')]\n",
+    "    return titles"
    ]
   },
   {
