Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,16 @@
    "outputs": [],
    "source": [
     "def retrieve_ratings(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    warning = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    book_container = warning.nextSibling.nextSibling\n",
+    "    star_dict = {'One': 1, 'Two': 2, 'Three':3, 'Four': 4, 'Five':5}\n",
+    "    star_ratings = []\n",
+    "    regex = re.compile(\"star-rating (.*)\")\n",
+    "    for p in book_container.findAll('p', {\"class\" : regex}):\n",
+    "        star_ratings.append(p.attrs['class'][-1])\n",
+    "    star_ratings = [star_dict[s] for s in star_ratings]\n",
+    "    return star_ratings"
    ]
   },
   {
