Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,12 @@
    "outputs": [],
    "source": [
     "def retrieve_prices(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    warning = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    book_container = warning.nextSibling.nextSibling\n",
+    "    prices = [p.text for p in book_container.findAll('p', class_=\"price_color\")]\n",
+    "    prices = [float(p[1:]) for p in prices] #Removing the pound sign and converting to float\n",
+    "    return prices"
    ]
   },
   {
