--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,11 @@
    "outputs": [],
    "source": [
     "def retrieve_availabilities(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    warning = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    book_container = warning.nextSibling.nextSibling\n",
+    "    avails = [a.text.strip() for a in book_container.findAll('p', class_=\"instock availability\")]\n",
+    "    return avails"
    ]
   },
   {
