Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,11 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import re\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd"
    ]
   },
   {
