--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,27 @@
     "import re\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "titles = []\n",
+    "star_ratings = []\n",
+    "prices = []\n",
+    "avails = []\n",
+    "for i in range(1,51):\n",
+    "    if i == 1:\n",
+    "        url = 'http://books.toscrape.com/'\n",
+    "    else:\n",
+    "            url = \"http://books.toscrape.com/catalogue/page-{}.html\".format(i)\n",
+    "    html_page = requests.get(url)\n",
+    "    soup = BeautifulSoup(html_page.content, 'html.parser')\n",
+    "    titles += retrieve_titles(soup)\n",
+    "    star_ratings += retrieve_ratings(soup)\n",
+    "    prices += retrieve_prices(soup)\n",
+    "    avails += retrieve_availabilities(soup)\n",
+    "df = pd.DataFrame([titles, star_ratings, prices, avails]).transpose()\n",
+    "df.columns = ['Title', 'Star_Rating', 'Price_(pounds)', 'Availability']\n",
+    "print(len(df))\n",
+    "df.head()"
    ]
   },
   {
