Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,9 +148,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Star_Rating</th>\n",
+       "      <th>Price_(pounds)</th>\n",
+       "      <th>Availability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A Light in the Attic</td>\n",
+       "      <td>3</td>\n",
+       "      <td>51.77</td>\n",
+       "      <td>In stock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tipping the Velvet</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.74</td>\n",
+       "      <td>In stock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Soumission</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50.1</td>\n",
+       "      <td>In stock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sharp Objects</td>\n",
+       "      <td>4</td>\n",
+       "      <td>47.82</td>\n",
+       "      <td>In stock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sapiens: A Brief History of Humankind</td>\n",
+       "      <td>5</td>\n",
+       "      <td>54.23</td>\n",
+       "      <td>In stock</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   Title Star_Rating Price_(pounds)  \\\n",
+       "0                   A Light in the Attic           3          51.77   \n",
+       "1                     Tipping the Velvet           1          53.74   \n",
+       "2                             Soumission           1           50.1   \n",
+       "3                          Sharp Objects           4          47.82   \n",
+       "4  Sapiens: A Brief History of Humankind           5          54.23   \n",
+       "\n",
+       "  Availability  \n",
+       "0     In stock  \n",
+       "1     In stock  \n",
+       "2     In stock  \n",
+       "3     In stock  \n",
+       "4     In stock  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
     "import re\n",
