Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,11 +285,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-9-4138348713d1>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4138348713d1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    next_button = soup.find(\"li\", class_=\"next\") #May return none if on final page\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code heredef get_next_page(soup):\n",
+    "    next_button = soup.find(\"li\", class_=\"next\") #May return none if on final page\n",
+    "    if next_button:\n",
+    "        return next_button.find('a').attrs['href']\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "def parse_url(url, titles=[], star_ratings=[], prices=[], avails=[]):\n",
+    "    html_page = requests.get(url)\n",
+    "    soup = BeautifulSoup(html_page.content, 'html.parser')\n",
+    "    titles += retrieve_titles(soup)\n",
+    "    star_ratings += retrieve_ratings(soup)\n",
+    "    prices += retrieve_prices(soup)\n",
+    "    avails += retrieve_availabilities(soup)\n",
+    "    next_url_ext = get_next_page(soup)\n",
+    "    if next_url_ext:\n",
+    "        next_url = '/'.join(url.split('/')[:-1])+'/' + next_url_ext\n",
+    "        return parse_url(next_url, titles, star_ratings, prices, avails)\n",
+    "    else:\n",
+    "        return titles, star_ratings, prices, avails\n",
+    "\n",
+    "\n",
+    "url = 'http://books.toscrape.com/'\n",
+    "titles, star_ratings, prices, avails = parse_url(url, titles, star_ratings, prices, avails)\n",
+    "\n",
+    "df = pd.DataFrame([titles, star_ratings, prices, avails]).transpose()\n",
+    "df.columns = ['Title', 'Star_Rating', 'Price_(pounds)', 'Availability']\n",
+    "print(len(df))\n",
+    "df.head()"
    ]
   },
   {
